--- a/src/style.css
+++ b/src/style.css
@@ -168,6 +168,37 @@ body {
   margin: 0 auto;
 }
 
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  width: 100%;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+}
+
+.task:hover{
+  background-color: var(--primary-light);
+}
+
+.task .material-icons {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.task-left {
+  display: flex;
+
+}
+
+.task-right {
+  display: flex;
+  justify-content: end;
+}
+
+
 .button-add-task {
   background-color: #fff;
   text-align: left;
