Add css class that matches color to task priority. Update functions to add/remove tasks and refresh the page. Things feel a step behind. Working on improving the fidelity level.

--- a/src/style.css
+++ b/src/style.css
@@ -227,3 +227,15 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.high {
+  color: red;
+}
+
+.mid {
+  color: orange;
+}
+
+.low {
+  color: blue;
+}
