--- a/src/style.css
+++ b/src/style.css
@@ -174,6 +174,9 @@ body {
   vertical-align: middle;
 }
 
+.input-edit-project {
+  margin-left: 1rem;
+}
 .material-icons {
   margin-right: 6px;
 }
@@ -305,6 +308,40 @@ body {
 
 .button-add-task:hover {
   background-color: var(--primary-light);
+}
+
+.add-task-modal {
+  display: flex;
+  flex-direction: column;
+  border: solid 1px var(--primary-dark);
+  border-radius: 5px;
+  padding: .5rem;
+}
+
+.add-task-modal-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-task-modal-header button {
+  cursor: pointer;
+  border: none;
+  background: white;
+}
+
+.add-task-modal-body form{
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-task-modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.add-task-modal-footer button{
+  padding: .25rem;
 }
 
 .footer {
