--- a/src/style.css
+++ b/src/style.css
@@ -9,21 +9,21 @@
  * http://google.github.io/material-design-icons/ */
 
 @font-face {
-  font-family: "Material Icons";
+  font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
   src: url(~material-design-icons/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local("Material Icons"), local("MaterialIcons-Regular"),
+  src: local('Material Icons'), local('MaterialIcons-Regular'),
     url(~material-design-icons/iconfont/MaterialIcons-Regular.woff2)
-      format("woff2"),
+      format('woff2'),
     url(~material-design-icons/iconfont/MaterialIcons-Regular.woff)
-      format("woff"),
+      format('woff'),
     url(~material-design-icons/iconfont/MaterialIcons-Regular.ttf)
-      format("truetype");
+      format('truetype');
 }
 
 .material-icons {
-  font-family: "Material Icons";
+  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   font-size: 24px; /* Preferred icon size */
@@ -44,15 +44,16 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Support for IE. */
-  font-feature-settings: "liga";
+  font-feature-settings: 'liga';
 }
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   min-height: 100vh;
 }
 
@@ -138,10 +139,7 @@ body {
 .project-item:hover .project-item-edit-and-delete {
   display: flex;
   align-items: center;
-  
 }
-
-
 
 .project-item:hover {
   background-color: var(--primary-light);
@@ -316,7 +314,7 @@ body {
   flex-direction: column;
   border: solid 1px var(--primary-dark);
   border-radius: 5px;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 .add-task-modal-header {
@@ -330,7 +328,7 @@ body {
   background: white;
 }
 
-.add-task-modal-body form{
+.add-task-modal-body form {
   display: flex;
   justify-content: space-between;
 }
@@ -341,11 +339,11 @@ body {
   gap: 1rem;
 }
 
-.add-task-modal-footer button{
-  padding: .25rem;
+.add-task-modal-footer button {
+  padding: 0.25rem;
 }
 
-.edit-task, 
+.edit-task,
 .delete-task {
   cursor: pointer;
 }
@@ -366,4 +364,8 @@ body {
 
 .low {
   color: blue;
+}
+
+.radio {
+  cursor: pointer;
 }
